--- a/style.css
+++ b/style.css
@@ -24,13 +24,22 @@
 }
 
 .card{
-    max-width: 54rem;
+    max-height: 340px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 87%;
+    border-radius: 15px;
+    padding: 4rem 2rem 6.4rem 2rem;
+    max-width: 36rem;
     margin: auto;
     background-color: var(--dark-grayish-blue);
     position: relative;
 }
 
 h1{
+    font-size: 17px;
+    letter-spacing: 0.25rem;
     color: var(--neon-green);
     margin-bottom: 1rem;
 }
@@ -47,6 +56,11 @@ h1{
     cursor: pointer;
 }
 
+.btn:hover{
+    box-shadow: 0 0 3rem rgba(31, 167, 101, 0.75);
+    transition: all 0.3s;
+}
+
 .adivce-text-field{
     text-align: center;
     color: var(--light-cyan);
@@ -59,6 +73,12 @@ p{
 
 .divider{
     margin-top: 2rem;
+    height: 20px;
+    width: 90%;
+}
+
+.divider-mobile{
+    display: none;
 }
 
 @media only screen and (max-width: 375px){
@@ -69,12 +89,21 @@ p{
         flex-direction: column;
         align-items: center;
         width: 87%;
-        border-radius: 10px;
+        border-radius: 15px;
         padding: 4rem 2rem 6.4rem 2rem;
     }
 
-    h1{
-        font-size: 20px;
-        letter-spacing: 0.25rem;
+    .divider{
+        display: none;
     }
+
+    .divider-mobile{
+        margin-top: 1rem;
+        display: block;
+    }
+}
+
+
+.hide{
+    display: none;
 }
